src/test/deca/syntax/invalid/test_lex/hello_world/string_triple_backslash.deca
// Description:
//    Println d'un triple backslash.
//    Le lexeur reconnait le premier // et / est un caractère invalide, ce qui fait une erreur.
//    [Lexicographie], Chaines de charactères:
//    On définit STRING_CAR comme l’ensemble de tous les caractères, à l’exception des caractères '"', '\'
//    et de EOL (fin de ligne).
//    STRING = '"' (STRING_CAR + '\\"' + '\\\\')* '"'
//
// Resultats:
//    Erreur de lexeur 
//
// Historique:
//    cree le 01/01/2022

{
        println(" \\\ ");
}
